fix: hardcode pure empty state in Mini App components and optimize UzumMarketService 3-tier scraper gateway